Changed all instances of `\n` to `%n` Removed TODO
Signed-off-by: dumbdemon <20498145+dumbdemon@users.noreply.github.com>